--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,13 +1,6 @@
-  .card__list {
-    display: grid;
-    justify-content: center;
-    grid-template-columns: repeat(auto-fit, 282px);
-    grid-gap: 20px 17px;
-    padding: 0;
-    margin: 0;
-  }
   
   .card {
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     list-style-type: none;
@@ -15,6 +8,7 @@
   }
   
   .card__image {
+    object-fit: cover;
     width: 282px;
     height: 282px;
   }
