--- a/blocks/model.css
+++ b/blocks/model.css
@@ -15,14 +15,13 @@
 
 .model__heading {
   color: #000;
-  width: 100%;
+  width: 330px;
+  height: 23px;
   font-size: 24px;
-  font-style: normal;
-  margin: 0;
-  padding-bottom: 54px;
-  line-height: 29px;
+  margin: 0 0 54px;
+  line-height: normal;
   font-weight: 900;
-  font-family: "inter", Arial, Helvetica, sans-serif;
+  font-family: "inter", Arial, sans-serif;
 }
 
 .model_opened {
@@ -36,6 +35,7 @@
   background-color: #fff;
   border-radius: 10px;
   max-width: 430px;
+  height: 330px;
 }
 
 .model__close {
@@ -54,22 +54,24 @@
 
 .model__close:hover {
   opacity: 60%;
+  cursor: pointer;
 }
 
 .model__input {
   border: none;
-  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   padding-bottom: 13px;
   margin-bottom: 30px;
   width: 100%;
-  font-family: "inter", Arial, Helvetica, sans-serif;
-  line-height: 17px;
+  height: 14px;
+  font-family: "inter", Arial, sans-serif;
+  line-height: normal;
   font-size: 14px;
   font-weight: 400;
 }
 
 .model__input:last-child {
-  margin-bottom: 48px;
+  margin-bottom: 45px;
 }
 
 .model__form {
@@ -82,14 +84,15 @@
 .model__button {
   background-color: #000;
   color: #fff;
-  height: 50px;
-  width: 100%;
+  height: 51px;
+  width: 358px;
   border: none;
   border-radius: 2px;
   font-size: 18px;
   line-height: 22px;
   font-weight: 400;
-  font-family: "inter", Arial, Helvetica, sans-serif;
+  font-family: "inter", Arial, sans-serif;
+  padding: 0;
 }
 
 .model__button:hover {
