--- a/blocks/model.css
+++ b/blocks/model.css
@@ -101,6 +101,11 @@
 }
 
 @media screen and (max-width: 630px) {
+
+  .model__heading{
+    font-size: 18px;
+  }
+
   .model__container {
     padding: 25px 22px;
     width: 282px;
@@ -124,6 +129,6 @@
     height: 26px;
     width: 26px;
     bottom: calc(100% + 26px);
-    left: calc(100% - 26px);
+    left: calc(100% - 36px);
   }
 }
